--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     
     <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.json?v=2" />
     
     <!-- Apple Touch Icons -->
     <link rel="apple-touch-icon" href="/icons/icon-192x192.svg" />
