--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,11 @@
     
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" sizes="any" href="/icons/icon-192x192.svg" />
+
+    <!-- Artistic Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800;900&family=JetBrains+Mono:wght@400;500;600;700&family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
